# Research

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  START_HERE.md  authoritative_guard.py  package_doctor.py  research_launch_gate.py  using-this-research-with-human-assistants-and-reasoning-agents.md
tools/: .gitignore  CHANGELOG.md  README.md  audit_current_claims.py  audit_current_surfaces.py  audit_edit_scope.py  audit_merged_docs.py  audit_repository_file_registry.py  audit_repository_minimality.py  audit_routing_surfaces.py  flake.nix  pyproject.toml  sync_governance_state.py
tools/docs/: ENVIRONMENT_ENTRY.md  architecture.md  backlog.md  sprint-log.md  validation-policy.md
tools/docs/adr/: 0001-tooling-scope.md  0002-human-validation-gate.md  0003-nix-plus-venv.md
tools/docs/archive/: sprint-log.md
tools/src/research_tools/: __init__.py  cli.py  config.py  paths.py  repo_files.py
tools/src/research_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/src/research_tools/generate/: __init__.py  file_registry.py  integrity_manifest.py
tools/src/research_tools/models/: __init__.py  clusters.py  ledger.py  reports.py  sources.py  subsystems.py
tools/src/research_tools/parse/: __init__.py  australia_ledger.py  governance_core.py  ledger.py  markdown_links.py  nz_ledger.py  source_registry.py  subsystems.py  taiwan_ledger.py
tools/tests/: conftest.py  test_governance.py  test_links.py  test_nz_ledger.py  test_reports.py  test_route_consistency.py  test_source_registry.py  test_taiwan_ledger.py  test_validation_clusters.py
(+379 files in other folders)
