[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-tools"
version = "0.1.0"
description = "Read-only research-support tooling for the Research repository."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Elaina", email = "17bestradiol@proton.me" },
]
license = { text = "CC BY 4.0 for repository content; code usage follows repository terms." }
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
research-tools = "research_tools.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

